--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,23 +1,49 @@
 <html> 
-   <head>
-   </head>
-   <body>
-     <p> Bienvenidos Frikis de la comunidad Rust</p>
-     <h1> Mensaje </h1>
-     <form>
-        <label for="mensaje">Pon tu friki mensaje</label><br/>
-        <textarea id="mensaje"></textarea> <br/>
-        <button id="enviarBtn">Enviar</button>
-     </form>
-     <h2 id="resultado"></h2>
-     <table id="mensajes">
-     </table>
-
+  <head>
+     <meta charset="utf-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1">
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  </head>
+   <body>
+    <div class="jumbotron text-center">
+        <h1> Bienvenidos Frikis de la comunidad Rust</h1> <br/>
+        <p id="nombre"> </p>
+    </div>
+    <div class="container">
+     <div class="row">
+       <div id="login" class="col-sm-4">
+         <form>
+          <div class="form-group">
+           <label for="frikiNombre">Tu nombre</label>
+           <input type="text" class="form-control" id="frikiNombre">
+         </div>
+         <button id="entrarBtn" type="submit" class="btn btn-default">Entrar</button>
+       </form>
+       </div>
+       <div id="divMensaje" class="col-sm-4 ">
+         <h1> Mensaje </h1>
+         <form>
+            <label for="mensaje">Pon tu friki mensaje</label><br/>
+            <textarea id="mensaje"></textarea> <br/>
+            <button type="button" class="btn btn-primary" id="enviarBtn">Enviar</button>
+         </form>
+         <h2 id="resultado"></h2>
+        </div>
+         <div class="col-sm-4">
+         <h2> Los mensajes ... </h2>
+         <table id="mensajes" class="table table-bordered">
+         </table>
+        </div>
+
+     </div>
+    </div>
      <script type="text/javascript">
-        var API_URL= 'http://127.0.0.1:4000/api/v1/frikis';
+        var friki_nombre="";
         $(document).ready(
            function() {
+          $('#divMensaje').hide();
             $.ajax({
                  type: 'GET',
                  crossDomain: true,
@@ -28,8 +54,8 @@
                     data.forEach( function(friki) {
                       var renglon = '<tr>'
                         +'<td>'+friki.date.toString()+'</td>'
-                        +'<td>'+friki.user.toString()+'</td>'
-                        +'<td>'+friki.greeting.toString()+'</td>'
+                        +'<td>'+friki.user+'</td>'
+                        +'<td>'+friki.greeting+'</td>'
                          +'</tr>';
                       $('#mensajes').append(renglon);
                     }); //foreach
@@ -38,16 +64,23 @@
                    { alert('Failed! ' + xhr.status + '*** ' + thrownError); },
                 });
            } //ajax get
-
-
         ); //ready 
+//manejo del boton entrar
+        $('#entrarBtn').on('click', function() {
+          friki_nombre=$('#frikiNombre').val();
+          $('#nombre').append($('#frikiNombre').val());
+          $('#login').hide();
+          $('#divMensaje').show();
+          return false;
+        });
+      
 //manejo del boton enviar
         $('#enviarBtn').on('click', function() {
                 $.ajax({
                   type: "POST",
-                  url: 'http://127.0.0.1:4000/api/v1/friki/webapp',
+                  url: 'http://127.0.0.1:4000/api/v1/friki/'+friki_nombre,
                   dataType: "json",
-                  data: {"saludo":$('#mensaje').val(),"nombre":"webapp"},
+                  data: {"saludo":$('#mensaje').val()},
                   success: function(data) {
                         location.reload();
                         $('#resultado').text("Id mensaje"+data).
